# python-dte-adjustment

./: .buildinfo  .gitignore  CONTRIBUTING.md  Pipfile  README.md  contributing.html  genindex.html  get_started.html  index.html  installation.html  modules.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-doc.yml  build.yml  publish.yml
_modules/: dte_adj.html  index.html
_modules/dte_adj/: plot.html
_sources/: contributing.rst.txt  get_started.rst.txt
docs/source/: conf.py  development.rst  get_started.rst  index.rst  installation.rst  modules.rst
dte_adj/: __init__.py  plot.py  util.py
dte_adj/plot/: __init__.py
example/: example.ipynb
tests/: test_adjusted_estimator.py  test_distribution_estimator_base.py  test_plot.py  test_simple_estimator.py
