[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dte_adj"
version = "0.1.1"
description = "This is a Python library for a research paper 'Estimating Distributional Treatment Effects in Randomized Experiments: Machine Learning for Variance Reduction'"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
  "numpy~=1.26",
  "matplotlib~=3.7",
  "scipy~=1.13.1"
]

[project.urls]
homepage = "https://github.com/CyberAgentAILab/python-dte-adjustment"