[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dte_adj"
version = "0.1.3"
description = "This is a Python library for a research paper 'Estimating Distributional Treatment Effects in Randomized Experiments: Machine Learning for Variance Reduction'"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
  "numpy~=1.26",
  "matplotlib~=3.7",
  "scipy~=1.13.1"
]

[project.urls]
homepage = "https://github.com/CyberAgentAILab/python-dte-adjustment"